test/module/mismatched_header.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling test.module.mismatched_header ( test/module/mismatched_header.hol, interpreted )
3:1: error: [HolBETA2-ModuleError]
   |                   
 3 | module wrong.name.
   | ^                 
Module header `wrong.name' does not match file path-derived name `test.module.mismatched_header'.

Hol =<< Hol >>= quit
